
Added
    Version check showing if there is an update available (#191)
    CRUD operations for image aliases (#170)
    Update image "public" & "auto update" properties (#170)
    Display some of the system details provided in LXD >= 4.1 (#206)
    Export instance as image

Fixed
    Cant load project inforatmion
    Cant upload file to instance files
    Cant load backups for instance (#211)

Changed
    Inject userId if requested by controller so the $userId variable in a
    controller will always be locked to the user using the app

    Use DB for validing if user is admin instead of session (#194)

    Re-purpose the cluster page, access it by clicking a cluster on the dashboard
    sidebar (#183)

    Store the user project in the database for each host, it can be over written
    anytime with a header (#194)

    Use the LXD recursion param to drasticly improve fetchin instances time

Fixed
    Cant add more than one profile to deploy cloud config (#198)

0.8.0 - 09/05/2020

Added
    Bulk action to stop containers (#184)
    Bulk action to start containers (#185)
    Add (optional) select GPU when deploying a cloud config (#199)

Changed
    Renamespaced & updated class names for lots of "Containers" to "Instances"
    to be consistent with the way we use LXD API, this will break any scripts

    When creating a usedBy link fetch image details and show user freindly name
    instead of fingerprint (#186)

    Use apiToken to authenticate user on API requests as part of the journey
    to a "statless api" (so client apps can exist) the current caveat is that
    the project will default to "default" for every request, until we move the
    data into the database (#180)

    Bump bootstrap version to 4.4.1 and made some changes to the way tooltips
    are initialized to fix modals not hiding (#177)

    Use ENV for sensitiveData/certs directory for snap

    Use PCI address for GPU device when creating an instance (#197)

Fixed